kubernetes/apps/headscale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: ingress-nginx-internal
  tls:
    - hosts:
        - headscale.immortalkeep.com
      secretName: headscale-ingress-tls
  rules:
    - host: headscale.immortalkeep.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: headscale
                port:
                  name: headscale

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale-external
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: ingress-nginx-external
  tls:
    - hosts:
        - headscale.immortalkeep.com
      secretName: headscale-ingress-tls
  rules:
    - host: headscale.immortalkeep.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: headscale
                port:
                  name: headscale

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headplane
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: ingress-nginx-internal
  tls:
    - hosts:
        - headplane.immortalkeep.com
      secretName: headplane-ingress-tls
  rules:
    - host: headplane.immortalkeep.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: headscale
                port:
                  name: headplane
